@@ -1,5 +1,10 @@
 2007-04-09 Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/interface_view.py: Added a 'do action' button 
+	(bug 424463).
+
+2007-04-09 Eitan Isaacson  <eitan@ascender.com>
+
 	* plugins/interface_view.glade: 
 	* plugins/interface_view.py: Make 'show' buttons insensitive when
 	nothing is selected (bug 424462).
